# VRGlove_firmware

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  VR_glove.cpp
main/bluetooth/: BLE.cpp
main/bluetooth/bluetooth/: Bluetooth.cpp
main/bluetooth/bluetooth/include/: Bluetooth.hpp
main/bluetooth/utils/: BLEUtils.cpp
main/flex_sensors/: adc_reader.cpp  flex_sensor.cpp
main/flex_sensors/include/: adc_reader.hpp  flex_sensor.hpp  flex_sensors.hpp
main/mpu/: mpu.cpp
main/mpu/include/: mpu.hpp  mpu_values.hpp
